# llm-call

./: LICENSE  README.md  pyproject.toml
src/llm-call/: llm_wrapper.py
src/llm_call/: __init__.py  llm_wrapper.py
