[project]
name = "llm-call"  
version = "0.1.0"
description = "A simple wrapper for Gemini/OpenAI LLM calls"
readme = "README.md"
authors = [
  { name="Eeshan V", email="eeshanvsk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "google-genai>=1.27.0",
  "openai>=1.97.1"
]
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
